src/objects/Metric_Content_Update__c.object
<CustomObject>
    <description>MG_Metric Content Update</description>
    <fields>
        <fullName>Bullet_Points__c</fullName>
        <inlineHelpText>~ is indicator for each bullet point</inlineHelpText>
        <label>Bullet Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economy</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Supply</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Prices</fullName>
                </value>
                <value>
                    <fullName>Distress</fullName>
                </value>
                <value>
                    <fullName>Meyers Index</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Definition__c</fullName>
        <label>Definition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Geo_Level__c</fullName>
        <label>Geo Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>CBSA</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Metric_Key__c</fullName>
        <label>Metric Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name__c</fullName>
        <label>Metric Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pull_Quote__c</fullName>
        <label>Pull Quote</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubTitle__c</fullName>
        <label>SubTitle</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <inlineHelpText>~ is indicator for each paragraph</inlineHelpText>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Metric Content Update</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Geo_Level__c</columns>
        <columns>Category__c</columns>
        <columns>Metric_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Community</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Geo_Level__c</columns>
        <columns>Metric_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Community</value>
        </filters>
        <label>Community</label>
    </listViews>
    <listViews>
        <fullName>Distress</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Geo_Level__c</columns>
        <columns>Metric_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Distress</value>
        </filters>
        <label>Distress</label>
    </listViews>
    <listViews>
        <fullName>Economy</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Geo_Level__c</columns>
        <columns>Metric_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Economy</value>
        </filters>
        <label>Economy</label>
    </listViews>
    <listViews>
        <fullName>Meyers_Index</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Geo_Level__c</columns>
        <columns>Metric_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Meyers Index</value>
        </filters>
        <label>Meyers Index</label>
    </listViews>
    <listViews>
        <fullName>Prices</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Geo_Level__c</columns>
        <columns>Metric_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Prices</value>
        </filters>
        <label>Prices</label>
    </listViews>
    <listViews>
        <fullName>Sales</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Geo_Level__c</columns>
        <columns>Metric_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <label>Sales</label>
    </listViews>
    <listViews>
        <fullName>Supply</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Geo_Level__c</columns>
        <columns>Metric_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Supply</value>
        </filters>
        <label>Supply</label>
    </listViews>
    <nameField>
        <label>Metric Content Update</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metric Content Update</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Record_Metric_Content_Name</fullName>
        <active>false</active>
        <description>If the Metric Content Update field&apos;s prior value is not Blank OR the user is not an Admin then it cannot be changed.</description>
        <errorConditionFormula>AND(
OR(
NOT(ISBLANK(PRIORVALUE(  Name  ))), ISCHANGED( Name )),
NOT(OR($Profile.Id = &quot;00ei00000010rH3&quot;))
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>This field cannot be changed. Please contact your Salesforce Admin with any questions.</errorMessage>
    </validationRules>
</CustomObject>